--- a/components/default/airflow/externalsecret.yaml
+++ b/components/default/airflow/externalsecret.yaml
@@ -14,6 +14,9 @@ spec:
       engineVersion: v2
       data:
         webserver-secret-key: '{{.WEBSERVER_SECRET_KEY}}'
+        CLIENT_ID: '{{.CLIENT_ID}}'
+        CLIENT_SECRET: '{{.CLIENT_SECRET}}'
+        OAUTH_DOMAIN: '{{OAUTH_DOMAIN}}'
   dataFrom:
     - extract:
         key: airflow
