--- a/components/default/airflow/values.yaml
+++ b/components/default/airflow/values.yaml
@@ -3,7 +3,7 @@ useStandardNaming: true
 airflowPodAnnotations:
   reloader.stakater.com/auto: "true"
 
-executor: "KubernetesExecutor|CeleryExecutor"
+executor: "CeleryKubernetesExecutor"
 
 extraEnv: |
   - name: AIRFLOW__CORE__LOAD_EXAMPLES
