--- a/components/default/airflow/externalsecret.yaml
+++ b/components/default/airflow/externalsecret.yaml
@@ -16,7 +16,7 @@ spec:
         webserver-secret-key: '{{.WEBSERVER_SECRET_KEY}}'
         CLIENT_ID: '{{.CLIENT_ID}}'
         CLIENT_SECRET: '{{.CLIENT_SECRET}}'
-        OAUTH_DOMAIN: '{{OAUTH_DOMAIN}}'
+        OAUTH_DOMAIN: '{{.OAUTH_DOMAIN}}'
   dataFrom:
     - extract:
         key: airflow
