--- a/components/default/airflow/values.yaml
+++ b/components/default/airflow/values.yaml
@@ -36,6 +36,8 @@ apiServer:
   apiServerConfig: |
     import os
     from flask_appbuilder.security.manager import AUTH_OAUTH
+    from airflow.configuration import conf
+    from werkzeug.middleware.proxy_fix import ProxyFix
 
     AUTH_TYPE = AUTH_OAUTH
 
@@ -81,6 +83,16 @@ apiServer:
 
     # force users to re-auth after 30min of inactivity (to keep roles in sync)
     PERMANENT_SESSION_LIFETIME = 1800
+
+    if conf.getboolean("fab", "ENABLE_PROXY_FIX"):
+    current_app.wsgi_app = ProxyFix(  # type: ignore
+        current_app.wsgi_app,
+        x_for=conf.getint("fab", "PROXY_FIX_X_FOR", fallback=1),
+        x_proto=conf.getint("fab", "PROXY_FIX_X_PROTO", fallback=1),
+        x_host=conf.getint("fab", "PROXY_FIX_X_HOST", fallback=1),
+        x_port=conf.getint("fab", "PROXY_FIX_X_PORT", fallback=1),
+        x_prefix=conf.getint("fab", "PROXY_FIX_X_PREFIX", fallback=1),
+    )
 
 createUserJob:
   useHelmHooks: false
