--- a/components/downloads/qbittorrent/values.yaml
+++ b/components/downloads/qbittorrent/values.yaml
@@ -18,8 +18,8 @@ controllers:
     initContainers:
       dnsdist:
         image:
-          repository: docker.io/powerdns/dnsdist-19
-          tag: 1.9.11@sha256:720091e8702abcc863a1ad6fe8667c62f82797f33cd4924a2e49c57d5da5b451
+          repository: docker pull powerdns/dnsdist-20
+          tag: 2.0.2
         restartPolicy: Always
       gluetun:
         dependsOn:
