(feat): add awx

--- a/clusters/talos/apps/15-database-operator.yaml
+++ b/clusters/talos/apps/15-database-operator.yaml
@@ -15,3 +15,11 @@ applications:
       namespace: default
     source:
       path: components/default/barman-cloud
+
+  awx-operator:
+    annotations:
+      argocd.argoproj.io/sync-wave: "15"
+    destination:
+      namespace: default
+    source:
+      path: components/default/awx
