--- a/components/default/awx-config/http-route.yaml
+++ b/components/default/awx-config/http-route.yaml
@@ -10,7 +10,7 @@ metadata:
     gethomepage.dev/href: "https://awx.${CLUSTER_DOMAIN}"
     gethomepage.dev/enabled: "true"
     gethomepage.dev/group: Ingress
-    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/awx.png
+    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons@main/png/ansible.png
 spec:
   parentRefs:
     - name: ${GATEWAY_NAME}
