(feat): add bgp

--- a/clusters/talos/apps/argo-system/argo-cd/external-secret.yaml
+++ b/clusters/talos/apps/argo-system/argo-cd/external-secret.yaml
@@ -20,6 +20,7 @@ spec:
         GATEWAY_EXTERNAL: "{{.GATEWAY_EXTERNAL}}"
         CLOUDFLARE_TUNNEL_ID: "{{.TUNNEL_ID_CASA}}"
         NAS_IP_ADDRESS: "{{.IP_ADDRESS}}"
+        KUBE_API_IP_ADDRESS: "{{.KUBE_API_IP_ADDRESS}}"
   dataFrom:
     - extract:
         key: talos
