--- a/components/network/envoy-gateway-config/gateway/envoy.yaml
+++ b/components/network/envoy-gateway-config/gateway/envoy.yaml
@@ -14,7 +14,7 @@ spec:
       envoyDeployment:
         replicas: 2
         container:
-          image: mirror.gcr.io/envoyproxy/envoy
+          image: mirror.gcr.io/envoyproxy/envoy:v1.36.4
           resources:
             requests:
               cpu: 100m
