(fix): add crds

--- a/clusters/talos/apps/kube-system/cilium/kustomization.yaml
+++ b/clusters/talos/apps/kube-system/cilium/kustomization.yaml
@@ -11,3 +11,4 @@ helmCharts:
     repo: oci://ghcr.io/home-operations/charts-mirror
     version: 1.18.5
     valuesFile: values.yaml
+    includeCRDs: true
