Revert "(fix): update resources"
This reverts commit 0243cc60735ce9e36d7689550592a891f0cb6f05.

--- a/clusters/talos/apps/kube-system/cilium/kustomization.yaml
+++ b/clusters/talos/apps/kube-system/cilium/kustomization.yaml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./networking.yaml
+  - ../../../../../components/kube-system/cilium
 
 helmCharts:
   - name: cilium
     releaseName: cilium
     namespace: kube-system
-    repo: oci://ghcr.io/home-operations/charts-mirror
+    repo: https://helm.cilium.io
     version: 1.18.5
     valuesFile: values.yaml
