--- a/clusters/talos/apps/kube-system/cilium/kustomization.yaml
+++ b/clusters/talos/apps/kube-system/cilium/kustomization.yaml
@@ -2,12 +2,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../../../../components/kube-system/cilium
+  - ./networking.yaml
 
 helmCharts:
   - name: cilium
     releaseName: cilium
     namespace: kube-system
-    repo: https://helm.cilium.io
+    repo: oci://ghcr.io/home-operations/charts-mirror
     version: 1.18.5
     valuesFile: values.yaml
+    includeCRDs: true
