--- a/clusters/talos/apps/kube-system/cilium/kustomization.yaml
+++ b/clusters/talos/apps/kube-system/cilium/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./networking.yaml
+  - ../../../../../components/kube-system/cilium
 
 helmCharts:
   - name: cilium
