--- a/components/kube-system/coredns/values.yaml
+++ b/components/kube-system/coredns/values.yaml
@@ -1,13 +1,12 @@
+---
 fullnameOverride: coredns
-image:
-  repository: mirror.gcr.io/coredns/coredns
-replicaCount: 2
 k8sAppLabelOverride: kube-dns
 serviceAccount:
   create: true
 service:
   name: kube-dns
   clusterIP: "10.96.0.10"
+replicaCount: 2
 servers:
   - zones:
       - zone: .
@@ -20,27 +19,23 @@ servers:
         configBlock: |-
           lameduck 5s
       - name: ready
-      - name: kubernetes
-        parameters: cluster.local in-addr.arpa ip6.arpa
-        configBlock: |-
-          pods verified
-          fallthrough in-addr.arpa ip6.arpa
-      - name: autopath
-        parameters: "@kubernetes"
-      - name: forward
-        parameters: . /etc/resolv.conf
-      - name: cache
-        configBlock: |-
-          prefetch 20
-          serve_stale
-      - name: loop
-      - name: reload
-      - name: loadbalance
-      - name: prometheus
-        parameters: 0.0.0.0:9153
       - name: log
         configBlock: |-
           class error
+      - name: prometheus
+        parameters: 0.0.0.0:9153
+      - name: kubernetes
+        parameters: cluster.local in-addr.arpa ip6.arpa
+        configBlock: |-
+          pods insecure
+          fallthrough in-addr.arpa ip6.arpa
+      - name: forward
+        parameters: . /etc/resolv.conf
+      - name: cache
+        parameters: 30
+      - name: loop
+      - name: reload
+      - name: loadbalance
 affinity:
   nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
