--- a/clusters/talos/apps/kube-system/cilium/values.yaml
+++ b/clusters/talos/apps/kube-system/cilium/values.yaml
@@ -18,7 +18,7 @@ cni:
   exclusive: false
 dashboards:
   enabled: true
-devices: bond+
+devices: en+
 enableIPv4BIGTCP: true
 endpointRoutes:
   enabled: true
