(fix): add username

--- a/components/default/nextcloud/externalsecret.yaml
+++ b/components/default/nextcloud/externalsecret.yaml
@@ -13,6 +13,8 @@ spec:
     template:
       engineVersion: v2
       data:
+        nextcloud-username: "{{ .username }}"
+        nextcloud-password: "{{ .password }}"
         # Postgres Init
         INIT_POSTGRES_DBNAME: nextcloud
         INIT_POSTGRES_HOST: postgres17-rw.default.svc.cluster.local
