--- a/components/default/nextcloud/values.yaml
+++ b/components/default/nextcloud/values.yaml
@@ -54,7 +54,7 @@ ingress:
   enabled: false
 persistence:
   enabled: true
-  existingClaim: nextcloud
+  existingClaim: nextcloud-data
 # this seems to be required for nextcloud initialization which takes a long time
 startupProbe:
   enabled: true
