(fix):revert changes

--- a/components/default/nextcloud/externalsecret.yaml
+++ b/components/default/nextcloud/externalsecret.yaml
@@ -13,8 +13,8 @@ spec:
     template:
       engineVersion: v2
       data:
-        nextcloud-username: "{{ .username }}"
-        nextcloud-password: "{{ .password }}"
+        nextcloud-username: "{{ .NC_USER }}"
+        nextcloud-password: "{{ .NC_PASSWORD }}"
         # Postgres Init
         INIT_POSTGRES_DBNAME: nextcloud
         INIT_POSTGRES_HOST: postgres17-rw.default.svc.cluster.local
