(fix): add datapvc

--- a/components/default/nextcloud/kustomization.yaml
+++ b/components/default/nextcloud/kustomization.yaml
@@ -4,7 +4,8 @@ resources:
   - ./externalsecret.yaml
   - ./http-route.yaml
   - ./pvc.yaml
-
+components:
+  - ../../volsync-system/volsync-replication
 helmCharts:
   - name: nextcloud
     releaseName: nextcloud
