--- a/components/default/nextcloud/values.yaml
+++ b/components/default/nextcloud/values.yaml
@@ -54,7 +54,11 @@ ingress:
   enabled: false
 persistence:
   enabled: true
-  existingClaim: nextcloud-data
+  existingClaim: nextcloud-config
+  nextcloudData:
+    enabled: true
+    existingClaim: nextcloud
+    accessMode: ReadWriteMany
 # this seems to be required for nextcloud initialization which takes a long time
 startupProbe:
   enabled: true
