--- a/components/default/nextcloud/pvc.yaml
+++ b/components/default/nextcloud/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nextcloud-data
+  name: nextcloud-config
   labels:
     app.kubernetes.io/instance: &name nextcloud
     app.kubernetes.io/name: *name
