--- a/components/default/nextcloud/values.yaml
+++ b/components/default/nextcloud/values.yaml
@@ -58,7 +58,7 @@ persistence:
   nextcloudData:
     enabled: true
     existingClaim: nextcloud
-    subPath: /var/www/html/nextcloud-data
+    subPath: nextcloud-data
     accessMode: ReadWriteOnce
 # this seems to be required for nextcloud initialization which takes a long time
 startupProbe:
