--- a/components/default/nextcloud/values.yaml
+++ b/components/default/nextcloud/values.yaml
@@ -57,8 +57,8 @@ persistence:
   existingClaim: nextcloud
   nextcloudData:
     enabled: true
-    subPath: nextcloud-data
-    accessMode: ReadWriteOnce
+    existingClaim: nextcloud-nfs
+    accessMode: ReadWriteMany
 # this seems to be required for nextcloud initialization which takes a long time
 startupProbe:
   enabled: true
