--- a/components/default/romm/values.yaml
+++ b/components/default/romm/values.yaml
@@ -60,7 +60,7 @@ persistence:
         subPath: config.yml
         readOnly: true
   data:
-    existingClaim: *app
+    existingClaim: romm
     advancedMounts:
       romm:
         app:
