--- a/components/default/romm/values.yaml
+++ b/components/default/romm/values.yaml
@@ -26,7 +26,7 @@ controllers:
           REDIS_PORT: 6379
           REDIS_DB: 11
           OIDC_ENABLED: true
-          OIDC_PROVIDER: Authentik
+          OIDC_PROVIDER: authentik
           OIDC_REDIRECT_URI: https://romm.${CLUSTER_DOMAIN}/api/oauth/openid
           OIDC_SERVER_APPLICATION_URL: https://id.${CLUSTER_DOMAIN}
         envFrom: *envFrom
