--- a/components/default/romm/values.yaml
+++ b/components/default/romm/values.yaml
@@ -28,7 +28,7 @@ controllers:
           OIDC_ENABLED: true
           OIDC_PROVIDER: authentik
           OIDC_REDIRECT_URI: https://romm.${CLUSTER_DOMAIN}/api/oauth/openid
-          OIDC_SERVER_APPLICATION_URL: https://id.${CLUSTER_DOMAIN}
+          OIDC_SERVER_APPLICATION_URL: https://id.${CLUSTER_DOMAIN}/application/o/romm
         envFrom: *envFrom
         securityContext:
           allowPrivilegeEscalation: false
