(fix): add igdb

--- a/components/default/romm/external-secret.yaml
+++ b/components/default/romm/external-secret.yaml
@@ -13,6 +13,8 @@ spec:
     template:
       engineVersion: v2
       data:
+        IGDB_CLIENT_ID: "{{.IGDB_CLIENT_ID}}"
+        IGDB_CLIENT_SECRET: "{{.IGDB_CLIENT_SECRET}}"
         # OIDC
         OIDC_CLIENT_ID: "{{ .CLIENT_ID }}"
         OIDC_CLIENT_SECRET: "{{ .CLIENT_SECRET }}"
