--- a/components/storage/velero/kustomization.yaml
+++ b/components/storage/velero/kustomization.yaml
@@ -8,5 +8,5 @@ helmCharts:
     releaseName: velero
     namespace: velero
     repo: https://vmware-tanzu.github.io/helm-charts/
-    version: 11.3.1
+    version: v8.3.0
     valuesFile: values.yaml
