--- a/components/storage/velero/values.yaml
+++ b/components/storage/velero/values.yaml
@@ -1,89 +1,39 @@
-image:
-  repository: velero/velero
-  tag: v1.17.1
-
 kubectl:
   image:
-    repository: bitnamilegacy/kubectl
-    tag:  1.33.4
-
-upgradeJobResources:
-  requests:
-    cpu: 100m
-    memory: 128Mi
-  limits:
-    memory: 512Mi
-
-deployNodeAgent: true
-
+    repository: docker.io/bitnamilegacy/kubectl
+cleanUpCRDs: true
+schedules:
+  full-cluster-backup:
+      disabled: false
+      labels:
+          backup_type: full_cluster
+      schedule: "0 0 * * *"
+      useOwnerReferencesInBackup: false
+      template:
+          ttl: "240h"
+          storageLocation: default
+          includedNamespaces:
+          - "*"
+configuration:
+  backupStorageLocation:
+    - name: default
+      provider: aws
+      bucket: "velero-backups"
+      prefix: "<<patch_me>>"
+      config:
+        region: "us-east-1"
+        s3Url: ""
+        s3ForcePathStyle: "true"
+  volumeSnapshotLocation:
+    - provider: aws
+      config:
+        region: "us-east-1"
+credentials:
+    useSecret: true
+    existingSecret: velero
 initContainers:
   - name: velero-plugin-for-aws
-    image: velero/velero-plugin-for-aws:v1.13.1
-    imagePullPolicy: IfNotPresent
+    image: velero/velero-plugin-for-aws:v1.9.0
     volumeMounts:
-      - mountPath: /target
-        name: plugins
-
-metrics:
-  enabled: true
-  serviceMonitor:
-    enabled: true
-  nodeAgentPodMonitor:
-    enabled: true
-
-configuration:
-  defaultBackupStorageLocation: minio
-  defaultVolumeSnapshotLocations: csi:truenas-nfs-snapshots
-
-  features: "EnableCSI"
-
-  logLevel: info
-  logFormat: text
-
-  csiSnapshotTimeout: 10m
-  backupRetentionPeriod: 720h0m0s
-
-credentials:
-  existingSecret: velero-minio-credentials
-
-resources:
-  requests:
-    cpu: 100m
-    memory: 128Mi
-  limits:
-    memory: 512Mi
-
-nodeAgent:
-  resources:
-    requests:
-      cpu: 100m
-      memory: 128Mi
-    limits:
-      memory: 1Gi
-
-  privileged: true
-
-  extraVolumes:
-    - name: snapshotter-socket-dir
-      hostPath:
-        path: /var/lib/kubelet/plugins/org.democratic-csi.truenas-nfs
-        type: DirectoryOrCreate
-
-  extraVolumeMounts:
-    - name: snapshotter-socket-dir
-      mountPath: /var/lib/kubelet/plugins/org.democratic-csi.truenas-nfs
-      mountPropagation: None
-
-  tolerations:
-    - key: node-role.kubernetes.io/control-plane
-      operator: Exists
-      effect: NoSchedule
-
-backupsEnabled: false
-snapshotsEnabled: false
-
-securityContext:
-  fsGroup: 65534
-  runAsGroup: 65534
-  runAsNonRoot: true
-  runAsUser: 65534
+    - mountPath: /target
+      name: plugins
