--- a/components/storage/velero/kustomization.yaml
+++ b/components/storage/velero/kustomization.yaml
@@ -2,11 +2,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: storage
-
+# resources:
+#   - secrets.yaml
 helmCharts:
   - name: velero
     releaseName: velero
-    namespace: velero
+    namespace: storage
     repo: https://vmware-tanzu.github.io/helm-charts/
     version: v8.3.0
     valuesFile: values.yaml
