--- a/components/storage/velero/kustomization.yaml
+++ b/components/storage/velero/kustomization.yaml
@@ -2,8 +2,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: storage
-# resources:
-#   - secrets.yaml
+resources:
+  - schedule-pvc-backup.yaml
+# Restore templates (uncomment when needed):
+#   - restore-pvc-by-name.yaml
+#   - restore-pvc-namespace.yaml
 helmCharts:
   - name: velero
     releaseName: velero
