--- a/components/storage/openebs/kustomization.yaml
+++ b/components/storage/openebs/kustomization.yaml
@@ -3,6 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: storage
 
+resources:
+  - diskpools.yaml
+  - storageclass-replicated.yaml
+
 helmCharts:
   - name: openebs
     releaseName: openebs
