--- a/components/storage/velero/restore-pvc-namespace.yaml
+++ b/components/storage/velero/restore-pvc-namespace.yaml
@@ -1,6 +1,13 @@
 ---
 # Restore all PVCs from a specific namespace backup
 # Usage: kubectl apply -f restore-pvc-namespace.yaml
+#
+# IMPORTANT: For data to be restored, the backup must have been created with
+# File System Backup (FSB) enabled (defaultVolumesToFsBackup: true)
+#
+# If restoring to the SAME namespace where PVCs already exist:
+#   1. Delete the existing PVCs first, OR
+#   2. Restore to a different namespace using namespaceMapping
 apiVersion: velero.io/v1
 kind: Restore
 metadata:
@@ -10,19 +17,25 @@ spec:
   # Name of the backup to restore from (required)
   # Find backups: kubectl get backups -n storage
   backupName: pvc-backup-YYYYMMDDHHMMSS
-  
+
   # Namespace(s) to restore
   includedNamespaces:
   - default
-  
-  # Only restore PVC and PV resources
+
+  # Resources to restore (pods needed for FSB data restore)
   includedResources:
   - persistentvolumeclaims
   - persistentvolumes
-  
-  # Restore the actual volume data
+  - pods
+
+  # Restore the actual volume data from FSB
   restorePVs: true
-  
+
   # Policy for handling existing resources
+  # Options: none (skip existing), update (patch existing)
   existingResourcePolicy: none
+
+  # Optional: Restore to a different namespace
+  # namespaceMapping:
+  #   default: default-restored
 
