(fix): enable csi

--- a/components/storage/openebs/kustomization.yaml
+++ b/components/storage/openebs/kustomization.yaml
@@ -6,6 +6,7 @@ namespace: storage
 resources:
   - diskpools.yaml
   - storageclass-replicated.yaml
+  - volumesnapshotclass.yaml
 
 helmCharts:
   - name: openebs
