--- a/components/storage/velero/values.yaml
+++ b/components/storage/velero/values.yaml
@@ -40,15 +40,21 @@ configuration:
         s3Url: "https://s3.omv.a113.casa"
         s3ForcePathStyle: "true"
   volumeSnapshotLocation:
-    - provider: aws
-      config:
-        region: "garage"
+    - name: default
+      provider: csi
+  # Enable CSI snapshot feature
+  features: EnableCSI
 credentials:
     useSecret: true
     existingSecret: velero
 initContainers:
   - name: velero-plugin-for-aws
     image: velero/velero-plugin-for-aws:v1.9.0
+    volumeMounts:
+    - mountPath: /target
+      name: plugins
+  - name: velero-plugin-for-csi
+    image: velero/velero-plugin-for-csi:v0.7.1
     volumeMounts:
     - mountPath: /target
       name: plugins
