--- a/components/storage/velero/values.yaml
+++ b/components/storage/velero/values.yaml
@@ -27,8 +27,11 @@ schedules:
           storageLocation: default
           includedNamespaces:
           - "*"
-          # Enable file system backup for all volumes by default
           defaultVolumesToFsBackup: true
+dnsPolicy: "None"
+dnsConfig:
+  nameservers:
+    - 10.30.0.1
 configuration:
   backupStorageLocation:
     - name: default
@@ -45,8 +48,8 @@ configuration:
   # Enable CSI snapshot feature
   features: EnableCSI
 credentials:
-    useSecret: true
-    existingSecret: velero
+  useSecret: true
+  existingSecret: velero
 initContainers:
   - name: velero-plugin-for-aws
     image: velero/velero-plugin-for-aws:v1.9.0
