--- a/components/storage/velero/values.yaml
+++ b/components/storage/velero/values.yaml
@@ -14,6 +14,11 @@ nodeAgent:
     limits:
       cpu: 1000m
       memory: 1Gi
+  # DNS config for node-agent to resolve S3 endpoint
+  dnsPolicy: "None"
+  dnsConfig:
+    nameservers:
+      - 10.30.0.1
 
 schedules:
   full-cluster-backup:
@@ -53,11 +58,6 @@ credentials:
 initContainers:
   - name: velero-plugin-for-aws
     image: velero/velero-plugin-for-aws:v1.9.0
-    volumeMounts:
-    - mountPath: /target
-      name: plugins
-  - name: velero-plugin-for-csi
-    image: velero/velero-plugin-for-csi:v0.7.1
     volumeMounts:
     - mountPath: /target
       name: plugins
