--- a/components/storage/postgres/kustomization.yaml
+++ b/components/storage/postgres/kustomization.yaml
@@ -1,12 +1,12 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: storage
+namespace: default
 
 helmCharts:
   - name: postgresql
     releaseName: postgres
-    namespace: storage
+    namespace: default
     repo: oci://registry-1.docker.io/bitnamicharts
     version: 18.2.0
     valuesFile: values.yaml
