--- a/components/storage/openebs/kustomization.yaml
+++ b/components/storage/openebs/kustomization.yaml
@@ -3,10 +3,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: storage
 
-resources:
-  - diskpools.yaml
-  - storageclass-replicated.yaml
-  - volumesnapshotclass.yaml
+# resources:
+#   - diskpools.yaml
+#   - storageclass-replicated.yaml
+#   - volumesnapshotclass.yaml
 
 helmCharts:
   - name: openebs
@@ -17,14 +17,14 @@ helmCharts:
     valuesFile: values.yaml
 
 
-patches:
-  - patch: |
-      - op: replace
-        path: /spec/template/spec/containers/0/image
-        value: "openebs/etcd:3.5.6-debian-11-r10"
-      - op: replace
-        path: /spec/template/spec/initContainers/0/image
-        value: "bitnamitest/bitnami-shell:11-debian-11-r118"
-    target:
-      kind: StatefulSet
-      name: openebs-etcd
+# patches:
+#   - patch: |
+#       - op: replace
+#         path: /spec/template/spec/containers/0/image
+#         value: "openebs/etcd:3.5.6-debian-11-r10"
+#       - op: replace
+#         path: /spec/template/spec/initContainers/0/image
+#         value: "bitnamitest/bitnami-shell:11-debian-11-r118"
+#     target:
+#       kind: StatefulSet
+#       name: openebs-etcd
