(fix): chart deployment

--- a/components/rook-ceph/rook-ceph-cluster/values.yaml
+++ b/components/rook-ceph/rook-ceph-cluster/values.yaml
@@ -4,6 +4,8 @@ monitoring:
   createPrometheusRules: true
 toolbox:
   enabled: true
+cephImage:
+  imagePullPolicy: IfNotPresent
 cephClusterSpec:
   cephConfig:
     global:
