--- a/clusters/omv/apps/volsync-system/volsync/mutatingadmissionpolicy.yaml
+++ b/clusters/omv/apps/volsync-system/volsync/mutatingadmissionpolicy.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: admissionregistration.k8s.io/v1beta1
+apiVersion: admissionregistration.k8s.io/v1alpha1
 kind: MutatingAdmissionPolicy
 metadata:
   name: volsync-mover
