--- a/clusters/omv/apps/volsync-system/volsync/kustomization.yaml
+++ b/clusters/omv/apps/volsync-system/volsync/kustomization.yaml
@@ -2,9 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../../../../components/volsync-system/volsync
-
-patches:
-  - path: mutatingadmissionpolicy.yaml
-    target:
-      kind: MutatingAdmissionPolicy
-      name: volsync-mover
+  - ./mutatingadmissionpolicy.yaml
