(fix): remove gitops

--- a/components/cattle-system/rancher/helm-chart.yaml
+++ b/components/cattle-system/rancher/helm-chart.yaml
@@ -22,7 +22,7 @@ spec:
     global:
       cattle:
         systemUpgradeController:
-          enabled; false
-    fleet:
+          enabled: false
+    fleet: |-
       gitops:
         enabled: false
